--- a/style.css
+++ b/style.css
@@ -1,182 +1,181 @@
- *{
-               outline: none;
-               box-sizing: border-box;
-          }
-          body{
-               margin: 0;
-               font-family: 'Ubuntu', sans-serif;
-               
-    font-size: 1.125rem;
-    font-weight: 350;
-    line-height: 1.6;
-               color: #2b283a;
-              /* background: #FEF5EB;*/
-              background: #E9E5FF;
-          }
-          .logo-img{
-               box-shadow:  3px 3px 3px #b3b3b3,
-             -3px -3px 5px #ffffff;
-             width: 80%;
-             display: block;
-             margin: 1.2rem auto;
-          }
-          .menu-btn,.close-btn{
-               background: none;
-               color: #fff;
-               border: none;
-               font-family: sans-serif;
-          }
-          .menu-container{
-               position: sticky;
-               top: 0;
-               background: #49366F;
-               padding: 0.4rem;
-               margin: 0;
-          }
-          .close-btn{
-               display: none;
-          }
-          header,footer{
-               background: #49366F;
-               padding: 0.5rem 1rem;
-               margin: 0;
-               font-size: 1rem;
-          }
-          ul{
-               list-style-type: none;
-               display: none;
-               flex-direction: column;
-               justify-content: space-around;
-               background: #49366F;
-               padding: 0;
-               margin: 0 auto;
-               font-size: 1.5em;
-               color: white;
-               text-align: center;
-               font-family: sans-serif;
-          }
-          li>a{
-               display: flex;
-               align-items: center;
-               justify-content: space-between;
-               gap: 0.5rem;
-               margin: 0.625rem;
-          }
-          .name{
-               color: white;
-               font-size: 2.5rem;
-               display: block;
-               width: 100%;
-               margin: 1em auto 0.5em;
-               text-align: center;
-          }
-          p{
-               font-size: 1.2rem;;
-               line-height: 1.8rem;
-               padding: 0 0.5rem;
-               color: inherit;
-          }
-          .skill-img{
-               width: 20%;
-              
-          }
-          .container{
-               /*background: #FFE4B5;*/
-               display: block;
-               width: 50%;
-               justify-content: space-between;
-               align-items: center;
-               padding: 8px;
-               border-radius: 8px;
-               box-shadow:  3px 3px 5px #a3a3a3,
-             -3px -3px 5px #ffffff;
-             margin: 1rem auto;
-               }
-          .section-2{
-               padding: 0.5rem;
-               text-align: center;
-               padding: 1em;
-               display: flex;
-               flex-direction: column;
-          }      
-.material-symbols-outlined {
-  font-weight: 400;
+
+  @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
+*{
+    font-family: 'Poppins',sans-serif;
+    outline: none;
+}
+.fa-times-thin:before {
+	content: '\00d7';
+}
+body{
+    color: #1f242d;
+    font-weight: 600;
+    font-size: 1rem;
+    line-height: 1.8rem;
+    background-color: #F1F1F1;
+    height: 100%;
+    padding-top: 50px;
+}
+.icon-container > a {
+  border: 5px solid #1F242D;
+  color: #1F242D;
+  width: 40px;
+  height: 40px;
+  text-align: center;
+  border-radius: 50%;
   font-size: 2rem;
+  display: flex;
+  align-items: center;
+ justify-content: center;
 }
-.contacts{
-     display: flex;
-     color: #49366F;
+.icon-container{
+ display: flex;
+ align-items: center;
+ justify-content: center;
+ gap: 0.8rem;
 }
-.fa-solid{
+.logo,a{
+    color: #f1f1f1;
+    font-weight: 900;
+}
+html{
+    height: 100%;
+}
+.logo{
+    font-size: 25px;
+    color: #1F242D;
+    font-weight: 600;
+}
+a{
+    text-decoration: none;
+}
+li a:hover{
+    color: aqua;
+    border-bottom: 2px solid #1F242D;
+}
+header{
     display: flex;
-    flex-direction: column;
-    text-align: center;
-    gap: 10%;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1.2rem 1rem;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    background: #1f242d;
+    border-bottom: 3px solid #1F242D;
 }
-span{
-     font-size: 25px;
-}    
-li{
-     margin: auto;
+.currentPage {
+    color: #1F242D;
 }
-.facebook{
-     background: #1877F2;
+.ul{
+    color: #1f242d;
 }
-.twitter{
-     background: #1D9BF0;
+ul{
+ list-style-type: none;
+    display: flex;
+    flex-direction: row;
+    gap: 0.5rem;
 }
-.whatsapp{
-     background: #31D44F;
+.img{
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    box-shadow: 5px 10px 20px #1F242D, -5px -10px 20px #1F242D;
 }
-li > a,li > a:visited,.contactLinks,li >a:hover{
-     text-decoration: none;
-     color: #FFF;
+.main{
+    margin-top: 100px;
 }
-.contactLinks{
-     width: 20%;
-     font-size: xx-large;
-     margin: 20px auto;
-     color: white;
-     border: none;
-     border-radius: 8px;
-     padding: 10px;
-     text-align: center;
-     box-shadow:  3px 3px 3px #b3b3b3,
-             -3px -3px 5px #ffffff;
+main{
+    height: 100%;
+    padding: 25px;
 }
-.contactLinks:active{
-                    box-shadow: -3px -3px 5px #ffffff;
-                    transform: translate(3px,3px);
-               }
-.welcome-text{
-     margin: auto;
-     font-size: 1.5rem;
-     width: 100%;
-     text-align: center;
+.about{
+    width: 50%;
 }
-.bizcard{
+.menu-btn{
+    display: none;
+    background: none;
+    color: #f1f1f1;
+    border: none;
+    font-size: 1.5rem;
+    outline: none;
+}
+.button{
+    background: #1F242D;
+    border: none;
+    margin: 2rem auto;
+    border-radius: 2rem;
+    padding: 16px 20px;
+    color: #f1f1f1;
+    font-size: x-large;
+    cursor: pointer;
+    font-weight: inherit;
+    box-shadow: 3px 3px 10px #1F242D;
+    outline: none;
+}
+.button:active{
+    transform: translate(3px, 3px);
+    box-shadow: none;
+}
+.close-btn{
+ position: relative;
+ top: 0;
+ right: 0;
+ background: none;
+ color: #f1f1f1;
+ border: none;
+ font-size: 1.5rem;
+ display: none;
+}
+@media screen and (max-width: 480px) {
+    header{
+        justify-content: space-between;
+    }
+    .ul{
+        display: none;
+        position: fixed;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        background: #1f242d;
+        width: 45%;
+        margin: 0;
+        
+    }
+    li > a{
+     color: #f1f1f1;
+    }
+    li{
+     margin: 0.5rem 0;
      display: block;
      width: 100%;
-}
-.footer{
-     color: #fff;
+    }
+    ul{
+     padding: 1rem;
+     flex-direction: column;
+    }
+    .menu-btn{
+        display: inline;
+   }
+    .main{
+        flex-direction: column-reverse;
+    }
+    .about{
+        width: 98%;
+        
+    }
+    .close-btn{
      display: block;
-     width: 100%;
-     text-align: center;
+    }
 }
-.item1{
-     
-}
-@keyframes Ayomide{
-     from{
-          flex-direction: row;
-     }
-     to{
-          flex-direction: row-reverse;
-     }
-}
-@media (min-width: 500px){
-     body{
-          
-     }
+
+@keyframes animations {
+ from {
+  box-shadow: 5px 10px 20px #1F242D, -5px -10px 20px #1F242D;
+ }
+ to {
+  box-shadow: -5px -10px 20px #1F242D, 5px 10px 20px #1F242D;
+ }
 }
